Fixes #99. Added proper enum testcase. Added extra property to permit file URIs when reading DTD sources.